background opacity fix on mobile header

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1126,7 +1126,7 @@ a.btn {
    }
 
    .mobile-header {
-     background-color: rgba(255,255,255,0.7);
+     background-color: rgba(255,255,255,0.85);
      height: 56px;
      width: 100%;
      display: flex;
